# mytinyrenderer

./: CMakeLists.txt  Readme.md  main.cpp  shader.txt
include/: geometry.h  model.h
src/: geometry.cpp  model.cpp
